# taskersapp

./: .env  .gitignore  package-lock.json  package.json  pyproject.toml  theme.json
.history/: tailwind.config_20250218221621.ts  tailwind.config_20250218221712.ts  tailwind.config_20250218221734.ts  tailwind.config_20250218222754.ts  tailwind.config_20250218222805.ts  tailwind.config_20250218222817.ts  tailwind.config_20250218222832.ts  theme_20250218221158.json  theme_20250218221307.json  theme_20250218221318.json
.history/client/: index_20250217233704.html
.history/client/src/: App_20250218214110.tsx  App_20250218214141.tsx  App_20250218214155.tsx  App_20250218214235.tsx  App_20250218214308.tsx  App_20250218214323.tsx  App_20250218214334.tsx  App_20250218214351.tsx  App_20250218214358.tsx  App_20250218214517.tsx  App_20250218214544.tsx  App_20250218214555.tsx  App_20250218214657.tsx  App_20250218214739.tsx  App_20250218214808.tsx  App_20250218221528.tsx  index_20250214014359.css  index_20250218222652.css
.history/server/: db_20250217212533.ts  db_20250217233323.ts  vite_20250218223313.ts  vite_20250218223336.ts
client/: index.html
client/src/: App.tsx
client/src/components/: avatar-upload.tsx  stats-display.tsx  task-card.tsx  task-form.tsx  theme-switch.tsx  user-nav.tsx
client/src/hooks/: use-mobile.tsx  use-quotes.tsx  use-sound-settings.tsx
client/src/lib/: i18n.ts
client/src/pages/: auth-page.tsx  completed-tasks-page.tsx  (+5 more)
server/: auth.py  auth.ts  database.py  db.ts  main.py  models.py  routes.ts  start.py  storage.ts
shared/: schema.ts
(+16 files in other folders)
